--- a/backfill/2024-03-23-clients_last_seen/kwindau_testing_20240514/Step2/kwindau_days_active_bits/metadata.yaml
+++ b/backfill/2024-03-23-clients_last_seen/kwindau_testing_20240514/Step2/kwindau_days_active_bits/metadata.yaml
@@ -1,1 +1,22 @@
-
+friendly_name: Kwindau Testing
+description: Temp table for testing
+owners:
+- kwindau@mozilla.com
+labels:
+  schedule: daily
+  owner1: kwindau
+scheduling:
+  depends_on_past: true
+bigquery:
+  time_partitioning:
+    type: day
+    field: submission_date
+    require_partition_filter: true
+    expiration_days: null
+  clustering:
+    fields: []
+workgroup_access:
+- role: roles/bigquery.dataViewer
+  members:
+  - workgroup:mozilla-confidential
+  - workgroup:dataops-managed/taar
